# SeedFinder

./: .gitignore  CMakeLists.txt  README.md
ChunkBiomesGUI/: .gitignore  Bfinders.c  Bfinders.h  Brng.h  CMakeLists.txt  ChunkBiomesGUI.cpp  LICENSE  README.md  build.bat  requirements.txt  seedfinder_server.py  start.bat  test.c
ChunkBiomesGUI/cubiomes/: CMakeLists.txt  finders.c
ChunkBiomesGUI/cubiomes/tables/: btree20.h
core/: CMakeLists.txt  SeedFinderBridge.cpp  SeedFinderBridge.h  seedfinder_wrapper.c  test_bridge.c
script/: INSTALL.txt  SeedFinder.lua
server/: build_exe.py  requirements.txt  seedfinder_server.py  start.bat  start.sh  start_exe.bat
server/base/linux/: index.py
server/base/win/: build_exe.py  index.py
server/bases/win/: index.py
server/vercel/: documentation.html  index.html  index.py  requirements.txt
